# vibecoding

./: .gitignore  1장-예제-안내.md  INSTALL-LINUX.md  INSTALL-MAC.md  PROMPTS.md  README.md  pyproject.toml
.claude/: settings.local.json
Study-01/: CLAUDE.md
Study-02/: CLAUDE.md  index.html  script.js  style.css  todo-app-conversation.txt
Study-03/: README.md
Study-04/: .env.example  .gitignore  CLAUDE.md  PRD_step1.md  PRD_step2.md  PRD_step3.md  README.md  STEP1_TEST_GUIDE.md  STEP1_TEST_REPORT.md  app.py  (+24 more)
practice/fridge-chef/: .gitignore  CLAUDE.md  PRD_step1.md  PRD_step2.md  PRD_step3.md  README.md  app.py  main.py  pyproject.toml  test_api.py
practice/fridge-chef/.claude/agents/: code-quality-reviewer.md  performance-optimizer.md  ux-designer.md
practice/fridge-chef/components/: __init__.py  empty_state.py  recipe_card.py  share_modal.py  stats_widgets.py
practice/fridge-chef/db/: __init__.py  database.py  init_db.py  models.py
practice/fridge-chef/docs/: NOTION_협업_개선_제안.md  WORK_REPORT_STEP1.md  WORK_REPORT_STEP2.md  WORK_REPORT_STEP3.md
practice/fridge-chef/models/: __init__.py  recipe.py
practice/fridge-chef/pages/: 1_🍳_재료_인식.py  2_📖_레시피_생성.py  3_👤_내_프로필.py  4_💾_저장된_레시피.py  5_📊_대시보드.py
practice/fridge-chef/services/: __init__.py  api_utils.py  auth.py  config.py  recipe.py  recommendation.py  sharing.py  user.py  vision.py
practice/fridge-chef/tests/: __init__.py  test_auth.py  test_recipe.py  test_recommendation.py  test_sharing.py  test_user.py  test_vision.py
practice/fridge-chef/utils/: __init__.py  charts.py  image.py  parser.py
(+145 files in other folders)
