[project]
name = "vibecoding"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "pyrefly>=0.46.1",
    "streamlit>=1.40.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "pillow>=11.0.0",
    "sqlalchemy>=2.0.0",
    "bcrypt>=4.2.0",
    "plotly>=5.18.0",
    "qrcode[pil]>=7.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.uv.workspace]
members = [
    "practice/fridge-chef",
]
